Debugged, working version